styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html,
  body {
    margin: 0px;
    @apply h-full dark:bg-neutral-900 dark:text-slate-300;
  }

  #__next {
    @apply h-full;
  }

  main {
    /* @apply text-lg; */
  }
}

.article-body h2 {
  @apply font-normal text-gray-800;
}

.article-body h3,
.article-body h4,
.article-body h5,
.article-body h6 {
  @apply font-normal;
}

.article-body .contains-task-list li {
  @apply list-none;
}

/* start - styling for auto-link headings */

.article-body .intra-page-link {
  @apply absolute no-underline;

  margin-left: -1em;
  padding-right: 0.5em;
  width: 100%;
  cursor: pointer;
}

.intra-page-link:after {
  @apply text-gray-300;
  content: '#';
}

.intra-page-link:hover:after {
  @apply text-gray-500;
}

/* end - styling for auto-link headings */

.skip-to-content {
  @apply absolute -left-1/4 -top-8  -translate-y-12 transform px-4 py-3 focus:top-0 focus:translate-y-0;
}

/* inline code styling*/
.article-body code {
  @apply rounded-md bg-gray-100 px-1 text-base dark:bg-[#6e768166];
}

/* Multi-line code blocks styling start */
.article-body pre {
  @apply overflow-x-scroll rounded-md border border-solid border-gray-200 bg-gray-100 px-4 py-2 dark:border-gray-700 dark:bg-[#161b22];
}

.article-body pre code {
  @apply bg-transparent p-0 text-zinc-800 dark:text-slate-300;
}

.article-body pre code .token.keyword {
  @apply text-violet-600;
}

.article-body pre code .token.keyword.module {
  @apply text-red-600;
}

.article-body pre code .token.class-name {
  @apply text-amber-800;
}

.article-body pre code .token.operator {
  @apply text-sky-800;
}
.article-body pre code .token.constant {
  @apply text-sky-700;
}

.article-body pre code .token.string {
  @apply text-sky-900 dark:text-blue-300;
}

.article-body pre code .token.maybe-class-name {
  @apply text-amber-800;
}

.article-body pre code .token.comment {
  @apply text-gray-500 dark:text-zinc-400;
}

.article-body pre code .token.literal-property.property {
  @apply text-sky-700;
}

.article-body pre code .token.property-access {
  @apply text-sky-700;
}

.article-body pre code .token.function {
  @apply text-violet-600;
}

.article-body pre code .token.control-flow {
  @apply text-red-600;
}

